# LTL_to_NGA

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  ltl_converter.cpp  run.sh  test.txt
include/ltl/: closure.hpp  ltl.hpp
include/utils/: dot_representation.hpp  reader.hpp
src/: CMakeLists.txt
src/ltl/: closure.cpp  ltl.cpp
src/utils/: dot_representation.cpp  reader.cpp
